--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,19 @@ services:
       ENABLE_ROLLING_LOGS: "true"
       RCON_CMDS_STARTUP: |-
         gamerule keepInventory true
+        chunky shape square
+        chunky center 0 0
+        chunky radius 512
+        chunky world overworld
+        chunky start
+        chunky world the_nether
+        chunky start
+        chunky world the_end
+        chunky start
+      RCON_CMDS_FIRST_CONNECT: |-
+        chunky pause
+      RCON_CMDS_LAST_DISCONNECT: |-
+        chunky continue
       RCON_CMDS_ON_CONNECT: |-
         team join Players @a[team=]
       VANILLATWEAKS_SHARECODE: cs6OrP
