configure some client side mods to be optional

--- a/mods/cameraoverhaul.pw.toml
+++ b/mods/cameraoverhaul.pw.toml
@@ -1,6 +1,9 @@
 name = "CameraOverhaul"
 filename = "CameraOverhaul-1.4.0-fabric-universal.jar"
 side = "client"
+optional = true
+default = false
+description = "Makes the camera move more like quake/half-life. Might cause motion sickness for some."
 
 [download]
 url = "https://cdn.modrinth.com/data/m0oRwcZx/versions/fzCKxnmb/CameraOverhaul-1.4.0-fabric-universal.jar"
