--- a/mods/ambientsounds.pw.toml
+++ b/mods/ambientsounds.pw.toml
@@ -1,6 +1,9 @@
 name = "AmbientSounds"
 filename = "AmbientSounds_FABRIC_v5.3.9_mc1.20.1.jar"
 side = "client"
+optional = true
+default = true
+description = "Adds ambient sounds based on your environment. Might be distracting to some."
 
 [download]
 url = "https://cdn.modrinth.com/data/fM515JnW/versions/rOt61sOt/AmbientSounds_FABRIC_v5.3.9_mc1.20.1.jar"
