--- a/mods/explosive-enhancement.pw.toml
+++ b/mods/explosive-enhancement.pw.toml
@@ -1,6 +1,9 @@
 name = "Explosive Enhancement"
 filename = "explosive-enhancement-1.2.2-1.20.x.jar"
 side = "client"
+optional = true
+default = true
+description = "Fancier explosion effects."
 
 [download]
 url = "https://cdn.modrinth.com/data/OSQ8mw2r/versions/LLkiKipc/explosive-enhancement-1.2.2-1.20.x.jar"
