--- a/mods/flow.pw.toml
+++ b/mods/flow.pw.toml
@@ -1,6 +1,9 @@
 name = "Flow"
 filename = "flow-1.4.0+1.20.1.jar"
 side = "client"
+optional = true
+default = true
+description = "Animated inventory/menu enter/exit."
 
 [download]
 url = "https://cdn.modrinth.com/data/Eoxi2LJd/versions/gxceji6a/flow-1.4.0%2B1.20.1.jar"
