--- a/mods/smooth-swapping.pw.toml
+++ b/mods/smooth-swapping.pw.toml
@@ -1,6 +1,9 @@
 name = "Smooth Swapping"
 filename = "smoothswapping-0.9.3.1-1.20.2-fabric.jar"
 side = "client"
+optional = true
+default = false
+description = "Animated item movement when fast-moving items between inventories. May be distracting to some."
 
 [download]
 url = "https://cdn.modrinth.com/data/ydZic5r4/versions/ZOPxSIii/smoothswapping-0.9.3.1-1.20.2-fabric.jar"
