--- a/mods/client-tweaks.pw.toml
+++ b/mods/client-tweaks.pw.toml
@@ -1,6 +1,8 @@
 name = "Client Tweaks"
 filename = "clienttweaks-fabric-1.20-11.1.0.jar"
 side = "client"
+
+[option]
 optional = true
 default = true
 description = "Random small behavioral QoL changes."
