--- a/mods/explosive-enhancement.pw.toml
+++ b/mods/explosive-enhancement.pw.toml
@@ -1,6 +1,8 @@
 name = "Explosive Enhancement"
 filename = "explosive-enhancement-1.2.2-1.20.x.jar"
 side = "client"
+
+[option]
 optional = true
 default = true
 description = "Fancier explosion effects."
