--- a/mods/seamless-loading-screen.pw.toml
+++ b/mods/seamless-loading-screen.pw.toml
@@ -1,6 +1,8 @@
 name = "Seamless Loading Screen "
 filename = "seamless-loading-screen-2.0.3+1.20.1-fabric.jar"
 side = "client"
+
+[option]
 optional = true
 default = true
 description = "Takes a screenshot when you disconnect to make loading screens more seamless."
