--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       ENABLE_ROLLING_LOGS: "true"
       RCON_CMDS_STARTUP: |-
         gamerule keepInventory true
+        gamerule playersSleepingPercentage 50
         chunky cancel
         chunky shape square
         chunky center 0 0
