disable autopause (poor interact. w/ chunky)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,9 @@ services:
       MAX_MEMORY: 8G
       TZ: America/New_York
       USE_AIKAR_FLAGS: "true"
-      ENABLE_AUTOPAUSE: "true"
-      AUTOPAUSE_TIMEOUT_EST: 10800
-      AUTOPAUSE_TIMEOUT_INIT: 10800
+      # ENABLE_AUTOPAUSE: "true"
+      # AUTOPAUSE_TIMEOUT_EST: 10800
+      # AUTOPAUSE_TIMEOUT_INIT: 10800
       STOP_SERVER_ANNOUNCE_DELAY: 5
       TUNE_VIRTUALIZED: "true"
       ENABLE_ROLLING_LOGS: "true"
