all serverside should be bothside

--- a/mods/additional-structures.pw.toml
+++ b/mods/additional-structures.pw.toml
@@ -1,6 +1,6 @@
 name = "Additional Structures"
 filename = "AdditionalStructures-1.20.x-(v.4.2.1).jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/TWsbC6jW/versions/4aO595R4/AdditionalStructures-1.20.x-%28v.4.2.1%29.jar"
