--- a/mods/infinite-trading.pw.toml
+++ b/mods/infinite-trading.pw.toml
@@ -1,6 +1,6 @@
 name = "Infinite Trading"
 filename = "infinitetrading-1.20.1-4.3.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/U3eoZT3o/versions/zpCesbuj/infinitetrading-1.20.1-4.3.jar"
