--- a/mods/structure-pool-api.pw.toml
+++ b/mods/structure-pool-api.pw.toml
@@ -1,6 +1,6 @@
 name = "Structure Pool API"
 filename = "structure_pool_api-1.0+1.20.1.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/LrYZi08Q/versions/Syp6lSTL/structure_pool_api-1.0%2B1.20.1.jar"
