--- a/mods/zombie-horse-spawn.pw.toml
+++ b/mods/zombie-horse-spawn.pw.toml
@@ -1,6 +1,6 @@
 name = "Zombie Horse Spawn"
 filename = "zombiehorsespawn-1.20.1-4.8.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/owDBGfRd/versions/lMQNGyig/zombiehorsespawn-1.20.1-4.8.jar"
