--- a/mods/always-a-wither-skull.pw.toml
+++ b/mods/always-a-wither-skull.pw.toml
@@ -1,6 +1,6 @@
 name = "Always a Wither Skull"
 filename = "alwaysawitherskull-1.20.1-3.2.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/RH07bruJ/versions/QLoXqk9M/alwaysawitherskull-1.20.1-3.2.jar"
