--- a/mods/bottle-your-xp.pw.toml
+++ b/mods/bottle-your-xp.pw.toml
@@ -1,6 +1,6 @@
 name = "Bottle Your Xp"
 filename = "bottleyourxp-1.20.1-3.3.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/bG2afBot/versions/ihoJf8sT/bottleyourxp-1.20.1-3.3.jar"
