--- a/mods/bottled-air.pw.toml
+++ b/mods/bottled-air.pw.toml
@@ -1,6 +1,6 @@
 name = "Bottled Air"
 filename = "bottledair-1.20.1-2.3.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/hvrrNux3/versions/TzVdS64T/bottledair-1.20.1-2.3.jar"
