--- a/mods/bouncier-beds.pw.toml
+++ b/mods/bouncier-beds.pw.toml
@@ -1,6 +1,6 @@
 name = "Bouncier Beds"
 filename = "bouncierbeds-1.20.1-2.3.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/DqIJgy14/versions/ZOp7Y3oX/bouncierbeds-1.20.1-2.3.jar"
