--- a/mods/breedable-killer-rabbit.pw.toml
+++ b/mods/breedable-killer-rabbit.pw.toml
@@ -1,6 +1,6 @@
 name = "Breedable Killer Rabbit"
 filename = "breedablekillerrabbit-1.20.1-3.4.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/bhXPWTWy/versions/OWYApduF/breedablekillerrabbit-1.20.1-3.4.jar"
