--- a/mods/crying-ghasts.pw.toml
+++ b/mods/crying-ghasts.pw.toml
@@ -1,6 +1,6 @@
 name = "Crying Ghasts"
 filename = "cryingghasts-1.20.1-3.3.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/SFBuyD9e/versions/8P29yw47/cryingghasts-1.20.1-3.3.jar"
