--- a/mods/enchanting-commands.pw.toml
+++ b/mods/enchanting-commands.pw.toml
@@ -1,6 +1,6 @@
 name = "Enchanting Commands"
 filename = "enchantingcommands-1.20.1-3.2.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/w8ljvewX/versions/BHvCbbQo/enchantingcommands-1.20.1-3.2.jar"
