--- a/mods/extended-bone-meal.pw.toml
+++ b/mods/extended-bone-meal.pw.toml
@@ -1,6 +1,6 @@
 name = "Extended Bone Meal"
 filename = "extendedbonemeal-1.20.1-3.3.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/bHkCoxMs/versions/WVeJyiyo/extendedbonemeal-1.20.1-3.3.jar"
