--- a/mods/fish-on-the-line.pw.toml
+++ b/mods/fish-on-the-line.pw.toml
@@ -1,6 +1,6 @@
 name = "Fish On The Line"
 filename = "fishontheline-1.20.1-3.2.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/R6PYx1PW/versions/5CJoqJSY/fishontheline-1.20.1-3.2.jar"
