--- a/mods/forgiving-void.pw.toml
+++ b/mods/forgiving-void.pw.toml
@@ -1,6 +1,6 @@
 name = "Forgiving Void"
 filename = "forgivingvoid-fabric-1.20-10.0.0.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/1vkzEZjE/versions/PbUdvapI/forgivingvoid-fabric-1.20-10.0.0.jar"
