--- a/mods/gazebos.pw.toml
+++ b/mods/gazebos.pw.toml
@@ -1,6 +1,6 @@
 name = "Gazebos (RPG Series)"
 filename = "gazebo-1.1.1+1.20.1.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/XIpMGI6r/versions/7OXOb67d/gazebo-1.1.1%2B1.20.1.jar"
