--- a/mods/grass-seeds.pw.toml
+++ b/mods/grass-seeds.pw.toml
@@ -1,6 +1,6 @@
 name = "Grass Seeds"
 filename = "grassseeds-1.20.1-3.2.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Y6d4uRJn/versions/Eb3Jj0un/grassseeds-1.20.1-3.2.jar"
