--- a/mods/mineral-chance.pw.toml
+++ b/mods/mineral-chance.pw.toml
@@ -1,6 +1,6 @@
 name = "Mineral Chance"
 filename = "mineralchance-1.20.1-3.4.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/bu1hACOl/versions/zGoW0TO4/mineralchance-1.20.1-3.4.jar"
