--- a/mods/mooshroom-tweaks.pw.toml
+++ b/mods/mooshroom-tweaks.pw.toml
@@ -1,6 +1,6 @@
 name = "Mooshroom Tweaks"
 filename = "mooshroomtweaks-1.20.1-3.4.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/B10lMHiA/versions/E6RnOwj0/mooshroomtweaks-1.20.1-3.4.jar"
