--- a/mods/skeleton-horse-spawn.pw.toml
+++ b/mods/skeleton-horse-spawn.pw.toml
@@ -1,6 +1,6 @@
 name = "Skeleton Horse Spawn"
 filename = "skeletonhorsespawn-1.20.1-3.8.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/ZcqNoW8j/versions/xkY8ly76/skeletonhorsespawn-1.20.1-3.8.jar"
