--- a/mods/smaller-nether-portals.pw.toml
+++ b/mods/smaller-nether-portals.pw.toml
@@ -1,6 +1,6 @@
 name = "Smaller Nether Portals"
 filename = "smallernetherportals-1.20.1-3.6.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/fYAofsi6/versions/rBD6EGxf/smallernetherportals-1.20.1-3.6.jar"
