--- a/mods/smarter-farmers-farmers-replant.pw.toml
+++ b/mods/smarter-farmers-farmers-replant.pw.toml
@@ -1,6 +1,6 @@
 name = "Smarter Farmers (farmers replant)"
 filename = "smarterfarmers-1.20-1.8.2-fabric.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Bh6ZOMvp/versions/WUfoHYXG/smarterfarmers-1.20-1.8.2-fabric.jar"
