--- a/mods/village-bell-recipe.pw.toml
+++ b/mods/village-bell-recipe.pw.toml
@@ -1,6 +1,6 @@
 name = "Village Bell Recipe"
 filename = "villagebellrecipe-1.20.1-3.2.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/u692zai1/versions/Jpq8cDzc/villagebellrecipe-1.20.1-3.2.jar"
