--- a/mods/weaponmaster.pw.toml
+++ b/mods/weaponmaster.pw.toml
@@ -1,6 +1,6 @@
 name = "YDM's Weapon Master"
 filename = "weaponmaster-client-only-fabric-1.20.1-3.0.5.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/qi1sj2da/versions/vC06Ct3m/weaponmaster-client-only-fabric-1.20.1-3.0.5.jar"
