--- a/config/fwaystones/config.json5
+++ b/config/fwaystones/config.json5
@@ -7,7 +7,7 @@
 		"village_waystone_weight": 2
 	},
 	"teleportation_cost": {
-		"cost_type": "XP",
+		"cost_type": "EXPERIENCE",
 		"cost_item": "minecraft:ender_pearl",
 		"base_cost": 7,
 		"cost_per_block_distance": 0.5,
