--- a/mods/breedable-killer-rabbit.pw.toml
+++ b/mods/breedable-killer-rabbit.pw.toml
@@ -1,13 +1,13 @@
 name = "Breedable Killer Rabbit"
-filename = "breedablekillerrabbit-1.20.1-3.4.jar"
+filename = "breedablekillerrabbit-1.20.1-3.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bhXPWTWy/versions/OWYApduF/breedablekillerrabbit-1.20.1-3.4.jar"
+url = "https://cdn.modrinth.com/data/bhXPWTWy/versions/VckHPNBX/breedablekillerrabbit-1.20.1-3.5.jar"
 hash-format = "sha1"
-hash = "056d68d267fdc504d3ccc9a8ab926065527dbee9"
+hash = "3348794da4bfb17b12c1b288a333ee8cf19201e2"
 
 [update]
 [update.modrinth]
 mod-id = "bhXPWTWy"
-version = "OWYApduF"
+version = "VckHPNBX"
