--- a/mods/mineral-chance.pw.toml
+++ b/mods/mineral-chance.pw.toml
@@ -1,13 +1,13 @@
 name = "Mineral Chance"
-filename = "mineralchance-1.20.1-3.4.jar"
+filename = "mineralchance-1.20.1-3.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bu1hACOl/versions/zGoW0TO4/mineralchance-1.20.1-3.4.jar"
+url = "https://cdn.modrinth.com/data/bu1hACOl/versions/8QJ2M7mt/mineralchance-1.20.1-3.5.jar"
 hash-format = "sha1"
-hash = "6920ef621428ebd45f8cc1e2a6158a63e49f3f3a"
+hash = "0f062a4109f101916b47f6c9046edf33c207561c"
 
 [update]
 [update.modrinth]
 mod-id = "bu1hACOl"
-version = "zGoW0TO4"
+version = "8QJ2M7mt"
