--- a/mods/more-geodes.pw.toml
+++ b/mods/more-geodes.pw.toml
@@ -1,13 +1,13 @@
 name = "More Geodes"
-filename = "more-geodes-1.8.2.jar"
+filename = "more-geodes-1.9.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/oGmBThKh/versions/bjZjJ7Gv/more-geodes-1.8.2.jar"
+url = "https://cdn.modrinth.com/data/oGmBThKh/versions/SRPBk9CJ/more-geodes-1.9.jar"
 hash-format = "sha1"
-hash = "94b701f074f588847a2b6b5994cb688fc580e0cf"
+hash = "7411c47daeb2328a11f4f972acabd9cde609bd5a"
 
 [update]
 [update.modrinth]
 mod-id = "oGmBThKh"
-version = "bjZjJ7Gv"
+version = "SRPBk9CJ"
