--- a/mods/show-me-your-skin.pw.toml
+++ b/mods/show-me-your-skin.pw.toml
@@ -1,13 +1,13 @@
 name = "Show Me Your Skin!"
-filename = "show-me-your-skin-1.7.2+1.20.jar"
+filename = "show-me-your-skin-1.8.0+1.20.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/bD7YqcA3/versions/kW2zWEwl/show-me-your-skin-1.7.2%2B1.20.jar"
+url = "https://cdn.modrinth.com/data/bD7YqcA3/versions/yPAbIxZe/show-me-your-skin-1.8.0%2B1.20.jar"
 hash-format = "sha1"
-hash = "128751181e7b33439f4b29628d79957ec999f5e4"
+hash = "1d0c3863fe7c2922a07b14fa5cee4fc3a2df5955"
 
 [update]
 [update.modrinth]
 mod-id = "bD7YqcA3"
-version = "kW2zWEwl"
+version = "yPAbIxZe"
