--- a/mods/sodium.pw.toml
+++ b/mods/sodium.pw.toml
@@ -1,13 +1,13 @@
 name = "Sodium"
-filename = "sodium-fabric-mc1.20-0.4.10+build.27.jar"
+filename = "sodium-fabric-0.5.8+mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/AANobbMI/versions/vgceLbdH/sodium-fabric-mc1.20-0.4.10%2Bbuild.27.jar"
+url = "https://cdn.modrinth.com/data/AANobbMI/versions/mhZtY2lR/sodium-fabric-0.5.8%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "b11e18bb09f06c3f8028fa2c090072976fa326d0"
+hash = "bdd6b8ac84b46ae56a3bbb761ce430c48e42e00d"
 
 [update]
 [update.modrinth]
 mod-id = "AANobbMI"
-version = "vgceLbdH"
+version = "mhZtY2lR"
