--- a/mods/ae2.pw.toml
+++ b/mods/ae2.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2"
-filename = "appliedenergistics2-fabric-15.0.22.jar"
+filename = "appliedenergistics2-fabric-15.0.23.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/ZyC52h3W/appliedenergistics2-fabric-15.0.22.jar"
+url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/4I61MxJa/appliedenergistics2-fabric-15.0.23.jar"
 hash-format = "sha1"
-hash = "22cbef9c1c0fede3386f3a4831a46b632ad3996e"
+hash = "4c0d6a24f3bb87dea53961d40de231cdd19b0625"
 
 [update]
 [update.modrinth]
 mod-id = "XxWD5pD3"
-version = "ZyC52h3W"
+version = "4I61MxJa"
