--- a/mods/amendments.pw.toml
+++ b/mods/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.1.3-fabric.jar"
+filename = "amendments-1.20-1.1.10-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/WayFYpop/amendments-1.20-1.1.3-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/yWu1eatY/amendments-1.20-1.1.10-fabric.jar"
 hash-format = "sha1"
-hash = "bc02a8b8b2df27da5f69640807afb099bbff54a4"
+hash = "0f138793e55431337b6fda9b76eaf5b5add28dce"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "WayFYpop"
+version = "yWu1eatY"
