--- a/mods/areas.pw.toml
+++ b/mods/areas.pw.toml
@@ -1,13 +1,13 @@
 name = "Areas"
-filename = "areas-1.20.1-5.4.jar"
+filename = "areas-1.20.1-5.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/NWvsqJ2Z/versions/riPhtBCe/areas-1.20.1-5.4.jar"
+url = "https://cdn.modrinth.com/data/NWvsqJ2Z/versions/FWeckZWH/areas-1.20.1-5.6.jar"
 hash-format = "sha1"
-hash = "22d779469fd248e85b3b1f29964ad88510080da0"
+hash = "2c6e1a1b154dc5a0fa3629ceb3577aa89e4f5268"
 
 [update]
 [update.modrinth]
 mod-id = "NWvsqJ2Z"
-version = "riPhtBCe"
+version = "FWeckZWH"
