--- a/mods/botany-pots.pw.toml
+++ b/mods/botany-pots.pw.toml
@@ -1,13 +1,13 @@
 name = "Botany Pots"
-filename = "BotanyPots-Fabric-1.20.1-13.0.24.jar"
+filename = "BotanyPots-Fabric-1.20.1-13.0.25.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/U6BUTZ7K/versions/CzGKsk9F/BotanyPots-Fabric-1.20.1-13.0.24.jar"
+url = "https://cdn.modrinth.com/data/U6BUTZ7K/versions/7xrR0A6Z/BotanyPots-Fabric-1.20.1-13.0.25.jar"
 hash-format = "sha1"
-hash = "6ff653c3ed1c074091dd6f726251bf9c5e789387"
+hash = "b0e431b7128d836e51a2792c864eeece69e49260"
 
 [update]
 [update.modrinth]
 mod-id = "U6BUTZ7K"
-version = "CzGKsk9F"
+version = "7xrR0A6Z"
