--- a/mods/charm-of-undying.pw.toml
+++ b/mods/charm-of-undying.pw.toml
@@ -1,13 +1,13 @@
 name = "Charm of Undying"
-filename = "charmofundying-fabric-6.4.5+1.20.1.jar"
+filename = "charmofundying-fabric-6.5.0+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/b5GyyYkp/versions/qxgJorhU/charmofundying-fabric-6.4.5%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/b5GyyYkp/versions/bRynnjen/charmofundying-fabric-6.5.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "0e29040ffa67dc091ce129b492de4b0161dc8cee"
+hash = "96d1e220f2697a0c2a63fca8eca2b1690d14ca4e"
 
 [update]
 [update.modrinth]
 mod-id = "b5GyyYkp"
-version = "qxgJorhU"
+version = "bRynnjen"
