--- a/mods/createaddition.pw.toml
+++ b/mods/createaddition.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Crafts & Additions"
-filename = "createaddition-fabric+1.20.1-1.2.1b.jar"
+filename = "createaddition-fabric+1.20.1-1.2.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/kU1G12Nn/versions/Emg6aiZC/createaddition-fabric%2B1.20.1-1.2.1b.jar"
+url = "https://cdn.modrinth.com/data/kU1G12Nn/versions/J3uh8pqe/createaddition-fabric%2B1.20.1-1.2.3.jar"
 hash-format = "sha1"
-hash = "ea81723bcfa4dfdcb48c080ada6d0aeb62315f45"
+hash = "e0109d1aba129d30482aaae060abac0ce1e56bc9"
 
 [update]
 [update.modrinth]
 mod-id = "kU1G12Nn"
-version = "Emg6aiZC"
+version = "J3uh8pqe"
