--- a/mods/do-api.pw.toml
+++ b/mods/do-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Let's Do: API"
-filename = "doapi-1.2.8-fabric.jar"
+filename = "doapi-1.2.9-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/4XJZeZbM/versions/wKMcbCEl/doapi-1.2.8-fabric.jar"
+url = "https://cdn.modrinth.com/data/4XJZeZbM/versions/XmngXs1Z/doapi-1.2.9-fabric.jar"
 hash-format = "sha1"
-hash = "c57cdb65cbeb309927e0ef8fbc163e80b216da42"
+hash = "d7e8c358fc615922bdbb0515248a47cf655fddea"
 
 [update]
 [update.modrinth]
 mod-id = "4XJZeZbM"
-version = "wKMcbCEl"
+version = "XmngXs1Z"
