--- a/mods/ecospherical-expansion.pw.toml
+++ b/mods/ecospherical-expansion.pw.toml
@@ -1,13 +1,13 @@
 name = "Ecospherical Expansion"
-filename = "eco-1.20.2-2.4.3.jar"
+filename = "eco-1.20.2-2.4.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/WtcuxDNN/versions/7P0EisYJ/eco-1.20.2-2.4.3.jar"
+url = "https://cdn.modrinth.com/data/WtcuxDNN/versions/SuHP58hd/eco-1.20.2-2.4.4.jar"
 hash-format = "sha1"
-hash = "a7488415f6a66814b6cdba02fe2cf53585b661fb"
+hash = "76812029e44a5b633028ff4ac87204ac9f58160c"
 
 [update]
 [update.modrinth]
 mod-id = "WtcuxDNN"
-version = "7P0EisYJ"
+version = "SuHP58hd"
