--- a/mods/fabric-api.pw.toml
+++ b/mods/fabric-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric API"
-filename = "fabric-api-0.88.1+1.20.1.jar"
+filename = "fabric-api-0.92.0+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/pYtlDijL/fabric-api-0.88.1%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/YG53rBmj/fabric-api-0.92.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "e85c54a01f173f6cb5e533e66593ea5d65d462a1"
+hash = "3373057a5049e311557f8c9494b35ef2df88d984"
 
 [update]
 [update.modrinth]
 mod-id = "P7dR8mSH"
-version = "pYtlDijL"
+version = "YG53rBmj"
