--- a/mods/frostiful.pw.toml
+++ b/mods/frostiful.pw.toml
@@ -1,13 +1,13 @@
 name = "Frostiful"
-filename = "frostiful-1.0.4.jar"
+filename = "frostiful-1.0.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ae6qoBj3/versions/RjfSgmLe/frostiful-1.0.4.jar"
+url = "https://cdn.modrinth.com/data/Ae6qoBj3/versions/7jXbtP7r/frostiful-1.0.6.jar"
 hash-format = "sha1"
-hash = "a698494be3fa6e9ba61d8d80a03551f04bd0bcf0"
+hash = "5ece0f5984fd446520c0e54be0a657d23849712e"
 
 [update]
 [update.modrinth]
 mod-id = "Ae6qoBj3"
-version = "RjfSgmLe"
+version = "7jXbtP7r"
