--- a/mods/geckolib.pw.toml
+++ b/mods/geckolib.pw.toml
@@ -1,13 +1,13 @@
 name = "Geckolib"
-filename = "geckolib-fabric-1.20.1-4.2.1.jar"
+filename = "geckolib-fabric-1.20.1-4.4.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/5bofFrdJ/geckolib-fabric-1.20.1-4.2.1.jar"
+url = "https://cdn.modrinth.com/data/8BmcQJ2H/versions/qsvFEDEz/geckolib-fabric-1.20.1-4.4.4.jar"
 hash-format = "sha1"
-hash = "3a766295b4d6147fe8bebe8c0fe42f0380ddd661"
+hash = "b1b376d97929d73df5e7aec1d6f2d3a318a7320b"
 
 [update]
 [update.modrinth]
 mod-id = "8BmcQJ2H"
-version = "5bofFrdJ"
+version = "qsvFEDEz"
