--- a/mods/immersive-aircraft.pw.toml
+++ b/mods/immersive-aircraft.pw.toml
@@ -1,13 +1,13 @@
 name = "Immersive Aircraft"
-filename = "immersive_aircraft-0.7.1+1.20.1-fabric.jar"
+filename = "immersive_aircraft-0.7.5+1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/x3HZvrj6/versions/hd1kk9vU/immersive_aircraft-0.7.1%2B1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/x3HZvrj6/versions/WNDpdgfW/immersive_aircraft-0.7.5%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "735fec4b49108b287ed52a137805b746979b067c"
+hash = "2a13a60a7db2d0550790b5937bbf0f8ff44eca07"
 
 [update]
 [update.modrinth]
 mod-id = "x3HZvrj6"
-version = "hd1kk9vU"
+version = "WNDpdgfW"
