--- a/mods/iris.pw.toml
+++ b/mods/iris.pw.toml
@@ -1,13 +1,13 @@
 name = "Iris Shaders"
-filename = "iris-mc1.20-1.6.4.jar"
+filename = "iris-mc1.20.1-1.6.17.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YL57xq9U/versions/URWeWMAt/iris-mc1.20-1.6.4.jar"
+url = "https://cdn.modrinth.com/data/YL57xq9U/versions/JHbrO6Zq/iris-mc1.20.1-1.6.17.jar"
 hash-format = "sha1"
-hash = "ec1491adc5dffeb0ab2f5da290b32cd4e45d58ad"
+hash = "daaa0a952273301117d3dc42bde68c6f1f60b318"
 
 [update]
 [update.modrinth]
 mod-id = "YL57xq9U"
-version = "URWeWMAt"
+version = "JHbrO6Zq"
