--- a/mods/just-mob-heads.pw.toml
+++ b/mods/just-mob-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Mob Heads"
-filename = "justmobheads-1.20.1-7.5.jar"
+filename = "justmobheads-1.20.1-7.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/jzTUm9hE/versions/yX7m7AAp/justmobheads-1.20.1-7.5.jar"
+url = "https://cdn.modrinth.com/data/jzTUm9hE/versions/pxyFdchY/justmobheads-1.20.1-7.6.jar"
 hash-format = "sha1"
-hash = "227747c1b71312f89d102d96469d75ab81558bc6"
+hash = "330ebf0e440ced04bafa3238b30f4ccea4fc9fa5"
 
 [update]
 [update.modrinth]
 mod-id = "jzTUm9hE"
-version = "yX7m7AAp"
+version = "pxyFdchY"
