--- a/mods/lets-do-meadow.pw.toml
+++ b/mods/lets-do-meadow.pw.toml
@@ -1,13 +1,13 @@
 name = "Let's Do: Meadow"
-filename = "letsdo-meadow-fabric-1.3.4.jar"
+filename = "letsdo-meadow-fabric-1.3.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ra7o6Sl7/versions/QHqnFZCQ/letsdo-meadow-fabric-1.3.4.jar"
+url = "https://cdn.modrinth.com/data/ra7o6Sl7/versions/uC0K8G0t/letsdo-meadow-fabric-1.3.6.jar"
 hash-format = "sha1"
-hash = "de29a7f25627d12bf4144026d8ad4b122faa390a"
+hash = "4d194cb7dee211ffd42664da913fac095eccbf3b"
 
 [update]
 [update.modrinth]
 mod-id = "ra7o6Sl7"
-version = "QHqnFZCQ"
+version = "uC0K8G0t"
