--- a/mods/lets-do-vinery.pw.toml
+++ b/mods/lets-do-vinery.pw.toml
@@ -1,13 +1,13 @@
 name = "Let's Do: Vinery"
-filename = "letsdo-vinery-fabric-1.4.9.jar"
+filename = "letsdo-vinery-fabric-1.4.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1DWmBJVA/versions/exu0aR0O/letsdo-vinery-fabric-1.4.9.jar"
+url = "https://cdn.modrinth.com/data/1DWmBJVA/versions/iEhTNXxg/letsdo-vinery-fabric-1.4.11.jar"
 hash-format = "sha1"
-hash = "a40eac41cd3a82a5f0edf5f435592e08012c1b0c"
+hash = "90b414364b34ca27e6ffcdbeb9912de7292adb74"
 
 [update]
 [update.modrinth]
 mod-id = "1DWmBJVA"
-version = "exu0aR0O"
+version = "iEhTNXxg"
