--- a/mods/mythicmetals.pw.toml
+++ b/mods/mythicmetals.pw.toml
@@ -1,13 +1,13 @@
 name = "Mythic Metals"
-filename = "mythicmetals-0.19.3+1.20.1.jar"
+filename = "mythicmetals-0.19.6+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bAWzYNRd/versions/AcBxwlrL/mythicmetals-0.19.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/bAWzYNRd/versions/VFnxeI8t/mythicmetals-0.19.6%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "c4e046769828bb5463950ceb3285a553093b7b57"
+hash = "a9b1ebc7ef99078ede2be53c6ca4ea8a2e3b718b"
 
 [update]
 [update.modrinth]
 mod-id = "bAWzYNRd"
-version = "AcBxwlrL"
+version = "VFnxeI8t"
