--- a/mods/philips-ruins.pw.toml
+++ b/mods/philips-ruins.pw.toml
@@ -1,13 +1,13 @@
 name = "Philips Ruins"
-filename = "Philips-Ruins1.20.1-3.2[Fabric].jar"
+filename = "Philips-Ruins1.20.1-3.4[Fabric].jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/KdJhOYVV/versions/XXpzFBM3/Philips-Ruins1.20.1-3.2%5BFabric%5D.jar"
+url = "https://cdn.modrinth.com/data/KdJhOYVV/versions/dKxorfcO/Philips-Ruins1.20.1-3.4%5BFabric%5D.jar"
 hash-format = "sha1"
-hash = "9b70f668ca145dda4dc7288611647c3cd59ed6cd"
+hash = "45a09d3b9d65432a20891bc88f6a2c88756ea50b"
 
 [update]
 [update.modrinth]
 mod-id = "KdJhOYVV"
-version = "XXpzFBM3"
+version = "dKxorfcO"
