--- a/mods/reeses-sodium-options.pw.toml
+++ b/mods/reeses-sodium-options.pw.toml
@@ -1,13 +1,13 @@
 name = "Reese's Sodium Options"
-filename = "reeses_sodium_options-1.6.2+mc1.20.1-build.85.jar"
+filename = "reeses_sodium_options-1.7.2+mc1.20.1-build.101.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Bh37bMuy/versions/jU0aA0l6/reeses_sodium_options-1.6.2%2Bmc1.20.1-build.85.jar"
+url = "https://cdn.modrinth.com/data/Bh37bMuy/versions/Rc9pkPug/reeses_sodium_options-1.7.2%2Bmc1.20.1-build.101.jar"
 hash-format = "sha1"
-hash = "4fd102104c6ac4b9fc21cd7e1bd91ca2cd57fd26"
+hash = "206f1b01b99ac3df99ddd84ed96b466a8700412d"
 
 [update]
 [update.modrinth]
 mod-id = "Bh37bMuy"
-version = "jU0aA0l6"
+version = "Rc9pkPug"
