--- a/mods/shoulder-surfing-reloaded.pw.toml
+++ b/mods/shoulder-surfing-reloaded.pw.toml
@@ -1,18 +1,18 @@
 name = "Shoulder Surfing Reloaded"
-filename = "ShoulderSurfing-Fabric-1.20.1-2.9.4.jar"
+filename = "ShoulderSurfing-Fabric-1.20.1-2.9.6.jar"
 side = "client"
 
-[option]
-optional = true
-default = true
-description = "Moves the third-person camera over the shoulder."
-
 [download]
-url = "https://cdn.modrinth.com/data/kepjj2sy/versions/DEFCwFb9/ShoulderSurfing-Fabric-1.20.1-2.9.4.jar"
+url = "https://cdn.modrinth.com/data/kepjj2sy/versions/tyv6ROKM/ShoulderSurfing-Fabric-1.20.1-2.9.6.jar"
 hash-format = "sha1"
-hash = "1ae78986668f2d8aefcfe93e8f50822b00cf4097"
+hash = "9aa29ac98dd60a5623d2b0e89e96a161a65502aa"
 
 [update]
 [update.modrinth]
 mod-id = "kepjj2sy"
-version = "DEFCwFb9"
+version = "tyv6ROKM"
+
+[option]
+optional = true
+description = "Moves the third-person camera over the shoulder."
+default = true
