--- a/mods/simple-copper-pipes.pw.toml
+++ b/mods/simple-copper-pipes.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Copper Pipes"
-filename = "SimpleCopperPipes-1.14.jar"
+filename = "SimpleCopperPipes-1.20.1-1.16.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9r4ZkgSN/versions/2wG0N40d/SimpleCopperPipes-1.14.jar"
+url = "https://cdn.modrinth.com/data/9r4ZkgSN/versions/RMObPif0/SimpleCopperPipes-1.20.1-1.16.1.jar"
 hash-format = "sha1"
-hash = "4c8afa4cf872bc0c00dff659446913ff70eece6b"
+hash = "c5cf7e0584155527b046f6938efbda4656534c50"
 
 [update]
 [update.modrinth]
 mod-id = "9r4ZkgSN"
-version = "2wG0N40d"
+version = "RMObPif0"
