--- a/mods/sodium-extra.pw.toml
+++ b/mods/sodium-extra.pw.toml
@@ -1,13 +1,13 @@
 name = "Sodium Extra"
-filename = "sodium-extra-0.4.27+mc1.20.1-build.110.jar"
+filename = "sodium-extra-0.5.4+mc1.20.1-build.115.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/PtjYWJkn/versions/UwpTYr4K/sodium-extra-0.4.27%2Bmc1.20.1-build.110.jar"
+url = "https://cdn.modrinth.com/data/PtjYWJkn/versions/I7ggF6B5/sodium-extra-0.5.4%2Bmc1.20.1-build.115.jar"
 hash-format = "sha1"
-hash = "1c2c528765976c4d50517ac3730e23cdcc2d1e36"
+hash = "890864a6ab5d77d57d8d757bcc31f5379b5a11b1"
 
 [update]
 [update.modrinth]
 mod-id = "PtjYWJkn"
-version = "UwpTYr4K"
+version = "I7ggF6B5"
