--- a/mods/xaeros-minimap.pw.toml
+++ b/mods/xaeros-minimap.pw.toml
@@ -1,13 +1,13 @@
 name = "Xaero's Minimap"
-filename = "Xaeros_Minimap_23.9.7_Fabric_1.20.jar"
+filename = "Xaeros_Minimap_24.0.1_Fabric_1.20.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/1bokaNcj/versions/rbY8QUIj/Xaeros_Minimap_23.9.7_Fabric_1.20.jar"
+url = "https://cdn.modrinth.com/data/1bokaNcj/versions/VkhLOjfb/Xaeros_Minimap_24.0.1_Fabric_1.20.jar"
 hash-format = "sha1"
-hash = "15b16b9bd9de172128029aa1318fb24cfa515ec9"
+hash = "5e9dfe893f8fa0214c1bc8f77e1867d8c2dc84a2"
 
 [update]
 [update.modrinth]
 mod-id = "1bokaNcj"
-version = "rbY8QUIj"
+version = "VkhLOjfb"
